add edit functions complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand">Simple Airbnb</a>
+      <form class="form-inline">
+        <%= link_to flats_path do %>
+          <button class="btn btn-outline-success my-2 my-sm-0">Home</button>
+        <% end %>
+        <%= link_to new_flat_path do %>
+          <button class="btn btn-outline-success ml-2 my-2 my-sm-0">Add a flat</button>
+        <% end %>
+      </form>
+    </nav>
     <%= yield %>
   </body>
 </html>
+
+
+
+
+
+
+
